# join_quran_1st

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
.gemini/commands/: sp.plan.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env  chatbot.py  main.py  models.py  pyproject.toml  scraper.py  test_chatbot.py  test_main.py
backend/.pytest_cache/v/cache/: nodeids
frontend/: .gitignore
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AboutUs.tsx  Chatbot.tsx  Contact.tsx  Courses.tsx  Fees.tsx  Hero.tsx  HowItWorks.tsx  Mission.tsx  Navbar.tsx  Reviews.tsx  StartLearning.tsx
history/prompts/constitution/: 0002-update-constitution-version-and-date.constitution.prompt.md  1-update-constitution-and-align-templates.constitution.prompt.md
history/prompts/general/: 1-create-chatbot-ui.general.prompt.md  2-commit-and-push-phr-file.general.prompt.md  3-create-readme-file.general.prompt.md  4-prepare-for-vercel-deployment.general.prompt.md  instructions.txt
